# Speech2Dialogue

./: LICENSE  README.md  download_models.py  pyproject.toml  requirements.txt  transcriber.py
speech2dialogue/: __init__.py  __main__.py  cli.py  configs.py  py.typed
speech2dialogue/core/: __init__.py  diarizer.py  exporter.py  processor.py
speech2dialogue/utils/: __init__.py  audio.py  video.py  voiceprint.py
